--- a/index.html
+++ b/index.html
@@ -30,40 +30,18 @@
         <div id="title-date"><span class="headerdate">23.10.2023</span> <span class="headertime">18.22</span></div>
     </div>
     <div id="page">
-        <label for="eventType">Valitse tapahtumalaji: </label>
+        <label for="selectType">Valitse tapahtumalaji: </label>
             <select name="eventType" id="selectType">
                 <option value="Movie">Elokuva</option>
                 <option value="LiveEvent">Tapahtuma</option>
             </select>
         <div id="SelectCity">
-            <label for="eventCity">Valitse kaupunki ja teatteri: </label>
+            <label for="selectTheater">Valitse kaupunki ja teatteri: </label>
             <select name="eventCity" id="selectTheater">
                 <option value="1029">Kaikki</option>
                 
             </select>
         </div>
-
-
-        <div class="onemovie">
-            <div class="movie-container">
-                <div class="left">
-                    <div class="movie-time">3Min</div>
-                    <div class="left movie-closing"><small>Loppuu</small><br>14.44</div>
-                </div>
-                <div class="movie-center">
-                    <div class="movie-title">Critters II : Toinen pesue<img src="%RatingImageUrl%" class="movie-mobile-rating-img" alt="%Rating%"></div>
-                    <div class="movie-info"><strong>2D</strong>, Scifi, 12 | Kesto 1t 22min. englanti, ranska | Helsinki 1 maxim</div>
-                    <div class="movie-desc">Edellinen Night Visions -avajaiselokuvana nähty korealaistuotanto oli Bong Joon Hon Parasite, josta kasvoi globaali ilmiö ja kaikki ällikällä lyönyt Oscar-magneetti. Concrete Utopian kohdalla ennusmerkit ovat jo ilmassa. Kotimaansa teattereissa lähes neljä</div>
-                    <div class="movie-links"><button>Osta liput</button> <button>Finnkino</button></div>
-                </div>
-                <div class="movie-right">
-                    <div class="movie-image"><img src="http://media.finnkino.fi/1012/Event_13866/landscape_small/MichaelMonroeDokumenttielokuva_444.jpg" style="height:auto;" alt="Title Image"></div>
-                    <div class="movie-links"><button style="width:100%; margin-right: 0px;">Osta liput</button>
-                </div>
-            </div>
-        </div>
-
-
         <div id="showtime"></div>
         
     </div>
