Public Beta versio

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div id="SelectCity">
             <label for="selectTheater">Valitse kaupunki ja teatteri: </label>
             <select name="eventCity" id="selectTheater">
-                <option value="1029">Kaikki</option>
                 
             </select>
         </div>
         <div id="showtime"></div>
+        <div id="statusbox"></div>
         
     </div>
     <div id="footer">
