--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         
     </div>
     <div id="footer">
-        <div class="footer-1">Footer 1</div>
+        <div class="footer-1">(c) Anders Nylander<br>School Project
+        </div>
         <div class="footer-2">This site is using Finnkino's Open XML API<br><a href="https://www.finnkino.fi/xml">https://www.finnkino.fi/xml</a></div>
     </div>
 </div>
